--- a/package.json
+++ b/package.json
@@ -10,9 +10,11 @@
     "export": "next export"
   },
   "dependencies": {
+    "bcryptjs": "^2.4.3",
     "gray-matter": "^4.0.3",
     "mongodb": "^6.1.0",
     "next": "latest",
+    "next-auth": "4.23.1",
     "react": "latest",
     "react-dom": "latest",
     "react-markdown": "^9.0.0",
